--- a/project-data-visu/src/App.css
+++ b/project-data-visu/src/App.css
@@ -3,6 +3,7 @@ body {
   padding: 0;
 }
 
+
 .App{
   background-color: white
 }
@@ -28,12 +29,12 @@ body {
   color: #FF0000; 
 }
 
-.nomesAlunos{
-  font-size: 10px;
+.student{
+  font-size: 12px;
   text-transform: uppercase;
   letter-spacing: 2px;
-  color: #707070;
-  font-family: "Oregela One";
+  color: #000000;
+  font-family: "Lucida Grande";
   font-weight: 100;	
   text-align: right;
   padding: 10px;
@@ -52,18 +53,24 @@ body {
 	letter-spacing: 0.3em;
 }
 
-.turma {
+.middle-page{
+  display: flex;
+  flex-direction: row;
+  justify-content: space-around;
+  align-items: center;
+  margin-top: 150px;
+}
+
+.class{
   font-size: 15px;
   text-transform: uppercase;
   letter-spacing: 2px;
-  color: #707070;
+  color: #000000;
   font-family: "Lucida Grande";
   font-weight: 100;	
   text-align: right;
   text-shadow: 1px 1px 1px #303030;
-  padding: 10px;
-  margin-right: 90px;
-  margin-top: 90px;
+  width: 300px;
 }
 
 .foot-bar{
@@ -82,14 +89,43 @@ body {
   display: flex;
   flex-direction: row;
   padding: 25px;
+  height: 100vh;
 }
 
-.text-image-mru{
-  width: 35vh;
+.graphs-gui{
+  display: flex;
+  flex-direction: row;
+  padding: 25px;
+  height: 90vh;
+}
+
+.graphs-guiMruLu{
+  display: flex;
+  flex-direction: row;
+  padding: 25px;
+  height: 90vh;
+}
+
+.text-image-guiMruLu{
+  width: 25vw;
+  height: 552px;
   margin-right: 15px;
   padding: 10px;
   margin: 5px;
   font-family: "Lucida Grande";
+  overflow-y: scroll;
+  overflow-x: hidden;
+}
+
+.text-image-mru{
+  width: 25vw;
+  height: 552px;
+  margin-right: 15px;
+  padding: 10px;
+  margin: 5px;
+  font-family: "Lucida Grande";
+  overflow-y: scroll;
+  overflow-x: hidden;
 }
 
 .scroll-container {
@@ -108,4 +144,38 @@ body {
   justify-content: center;
   height: 100%;
   font-size: 5em;
+}
+
+.text-image-gui{
+  width: 25vw;
+  height: 590px;
+  margin-left: 15px;
+  padding: 10px;
+  margin: 5px;
+  font-family: "Lucida Grande";
+  overflow-y: scroll;
+  overflow-x: hidden;
+}
+
+.all-graphs{
+  padding-left: 20px;
+  padding-right: 20px;
+  justify-content: space-between;
+}
+
+.separate{
+  height: 35px;
+}
+
+.separate1{
+  height: 35px;
+}
+
+.separate2{
+  height: 35px;
+}
+
+
+.dotsVisu{
+  height: 100vh;
 }
