--- a/project-data-visu/src/components/MyMap/styles.css
+++ b/project-data-visu/src/components/MyMap/styles.css
@@ -13,3 +13,12 @@
     height: 80vh;
     width: 80vw; 
 }
+
+.all-map{
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    width: 100%;
+}
+
